--- a/Sarlatan/platforms/android/app/src/main/assets/www/index.html
+++ b/Sarlatan/platforms/android/app/src/main/assets/www/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet"
         href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <title>Hello World</title>
 </head>
 
