--- a/Sarlatan/platforms/browser/www/index.html
+++ b/Sarlatan/platforms/browser/www/index.html
@@ -36,6 +36,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <title>Hello World</title>
 </head>
 
